@@ -61,6 +61,9 @@ jobs:
           devscripts \
           qttools5-dev \
           qttools5-dev-tools \
+          libnotify-dev \
+          libglib2.0-dev \
+          libgdk-pixbuf2.0-dev \
           && rm -rf /var/lib/apt/lists'
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
