@@ -39,4 +39,14 @@ add_library(synlib STATIC ${sources})
 
 if (UNIX)
     target_link_libraries(synlib arch client ipc net base platform mt server)
+    if (NOT APPLE)
+        find_package(PkgConfig REQUIRED)
+        pkg_check_modules(lib_glib REQUIRED IMPORTED_TARGET glib-2.0)
+        pkg_search_module( PC_GDKPIXBUF gdk-pixbuf-2.0 )
+        include_directories(${PC_GDKPIXBUF_INCLUDE_DIRS})
+        pkg_check_modules(lib_gdkpixbuf REQUIRED IMPORTED_TARGET gdk-pixbuf-2.0 )
+        pkg_check_modules(lib_notify REQUIRED IMPORTED_TARGET libnotify)
+        target_link_libraries(synlib PkgConfig::lib_glib PkgConfig::lib_gdkpixbuf PkgConfig::lib_notify)
+    endif()
 endif()
+
