@@ -21,6 +21,10 @@
 #include "base/Log.h"
 #include "base/log_outputters.h"
 
+#if WINAPI_XWINDOWS
+#include <libnotify/notify.h>
+#endif
+
 AppUtilUnix::AppUtilUnix(IEventQueue* events)
 {
 }
@@ -52,6 +56,27 @@ AppUtilUnix::showNotification(const String & title, const String & text) const
 {
     LOG((CLOG_DEBUG "Showing notification. Title: \"%s\". Text: \"%s\"", title.c_str(), text.c_str()));
 #if WINAPI_XWINDOWS
+    if (!notify_init("Synergy"))
+    {
+        LOG((CLOG_INFO "Failed to initialize libnotify"));
+        return;
+    }
+
+    auto notification = notify_notification_new (title.c_str(), text.c_str(), nullptr);
+    if (notification == nullptr)
+    {
+        LOG((CLOG_INFO "Failed to create notification"));
+        return;
+    }
+    notify_notification_set_timeout(notification, 10000);
+
+    if (!notify_notification_show(notification, nullptr))
+    {
+        LOG((CLOG_INFO "Failed to show notification"));
+    }
+
+    g_object_unref(G_OBJECT(notification));
+    notify_uninit();
 
 #elif WINAPI_CARBON
     // synergys and synergyc are not allowed to send native notifications on MacOS
